# MacroDataHub

./: AUTHORS.rst  CONTRIBUTING.rst  MacroDataHub.code-workspace  Makefile  Notes.txt  README.md  README.rst  V2.txt  dir_eng.py  pyproject.toml  tree.txt
MacroDataHub/: Makefile  __init__.py  dataset.py  dir_eng.py  features.py  tox.ini
MacroDataHub/.github/: ISSUE_TEMPLATE.md
MacroDataHub/docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
MacroDataHub/modeling/: predict.py
MacroDataHub/tests/: test_MacroDataHub.py
config/: config.yaml  config_default.yaml
config/config/: config.yaml
docs/: index.rst
src/MacroDataHub/: Main.py  __init__.py
src/MacroDataHub/adapters/scrapers/: ibge_scraper.py
src/MacroDataHub/adapters/storage/: local_storage.py
src/MacroDataHub/core/models/: series.py
src/MacroDataHub/core/ports/: format_port.py  storage_port.py
src/MacroDataHub/core/services/: series_service.py
src/MacroDataHub/extract/: SGS.py  Sidra.py  Super.py  SuperClass.py
src/MacroDataHub/utils/: Metadata.ods  config_manager.py  dir_manager.py  paths.py
src/MacroDataHub_V2/adapters/scrapers/: ibge_scraper.py
src/MacroDataHub_V2/core/models/: series.py
src/MacroDataHub_V2/core/ports/: storage_port.py
tests/: __init__.py  scraping_ibge.ipynb
tests/Original_Cookiecutter_setup/: plots.py
tests/Original_Cookiecutter_setup/modeling/: train.py
