[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MacroDataHub"
version = "0.1.0"
description = "Centralizador de dados e análises macroeconômicas"
readme = "README.rst"
authors = [
  {name = "Matheus Belmar Leal", email = "matheusleal2596@hotmail.com"}
]
maintainers = [
  {name = "Matheus Belmar Leal", email = "matheusleal2596@hotmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/matheusbelmar/MacroDataHub/issues"
changelog = "https://github.com/matheusbelmar/MacroDataHub/blob/master/changelog.md"
homepage = "https://github.com/matheusbelmar/MacroDataHub"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

